Fix invisible menu on wide screens and refactor collapse menu click area

--- a/public_wallet_app/css/styles.css
+++ b/public_wallet_app/css/styles.css
@@ -526,6 +526,9 @@ td {
   width: 0.9rem;
   height: 0.9rem;
 }
+.inline {
+  display: inline;
+}
 @media screen and (max-width: 840px) {
   body {
     padding-top: 3.5rem;
